plugins {
	id 'fabric-loom' version "${loom_version}"
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()

	maven { url 'https://maven.shedaniel.me/' }
	maven { url 'https://api.modrinth.com/maven' }
	maven { url 'https://maven.terraformersmc.com/releases/' }
	maven {
		url = 'https://maven.isxander.dev/releases'
		name = 'Xander Maven'
	}
	maven {
		url "https://oss.sonatype.org/content/repositories/snapshots/"
	}
	maven {
		url 'https://oss.sonatype.org/content/repositories/snapshots'
		content {
			includeGroup "io.github.spair"
		}
	}
	maven { url 'https://jitpack.io' }
}

loom {
	mods {
		"nodecraft" {
			sourceSet sourceSets.main
		}
	}
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// Minecraft & Fabric
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// GUI - ImGui
	modImplementation "com.github.SpaiR:imgui-java:v${project.imgui_version}"
	include "com.github.SpaiR:imgui-java-binding:v${project.imgui_version}"
	include "com.github.SpaiR:imgui-java-lwjgl3:v${project.imgui_version}"
	include "com.github.SpaiR:imgui-java-gl3:v${project.imgui_version}"
	include "com.github.SpaiR:imgui-java-natives-windows:v${project.imgui_version}"
	include "com.github.SpaiR:imgui-java-natives-linux:v${project.imgui_version}"
	include "com.github.SpaiR:imgui-java-natives-macos:v${project.imgui_version}"

	// Algorithms & math libraries
	implementation "org.locationtech.jts:jts-core:${project.jts_version}"
	implementation "org.joml:joml:${project.joml_version}"
	include "org.joml:joml:${project.joml_version}"
	implementation "org.apache.commons:commons-math3:${project.commons_math_version}"

	// Configuration library
	modImplementation "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"

	// SVG rendering for node icons
	implementation "com.github.weisj:jsvg:${project.jsvg_version}"
	include "com.github.weisj:jsvg:${project.jsvg_version}"

	// JSON serialization
	implementation "com.google.code.gson:gson:${project.gson_version}"

	// Tests
	testImplementation "org.junit.jupiter:junit-jupiter:${project.junit_version}"
	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${project.junit_version}"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:${project.junit_platform_version}"
}

tasks.named('test', Test) {
	useJUnitPlatform()
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	options.release = 21
	options.encoding = 'UTF-8'
	options.compilerArgs += ["-Xlint:deprecation", "-Xlint:unchecked"]
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archives_base_name}" }
	}
}
